# Precision-Grasp-Pose-Datasets

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
data/hdf5/: ur10esrh.h5
data/robot/ur10esrh/: scene.xml  ur10esrh.xml
data/robot/ur10esrh/assets/: base.stl  forearm.stl  shoulder.stl  upperarm.stl  wrist1.stl  wrist2.stl  wrist3.stl
data/robot/ur5e85/: scene.xml  ur5e85.xml
scripts/: reader.py  ur10esrh_reader.py  ur5e85_reader.py
